--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
 /public/hot
-/public/storage
 /storage/*.key
 /vendor
 .env
@@ -13,3 +12,4 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/docker/mysql/data/*
