--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,9 +2,16 @@ FROM php:8.1-fpm
 
 COPY php.ini /usr/local/etc/php/
 
-RUN apt update \
-  && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
-  && docker-php-ext-install pdo_mysql zip
+RUN apt-get update && apt-get install -y \
+  default-mysql-client \
+  zlib1g-dev \
+  libzip-dev \
+  unzip \
+  libpng-dev \
+  libjpeg-dev \
+  libfreetype6-dev \
+  && docker-php-ext-configure gd --with-freetype --with-jpeg \
+  && docker-php-ext-install gd pdo_mysql zip
 
 RUN curl -sS https://getcomposer.org/installer | php \
   && mv composer.phar /usr/local/bin/composer \
