--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,13 @@ services:
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel_db
+      MYSQL_DATABASE: laravel_test
       MYSQL_USER: laravel_user
       MYSQL_PASSWORD: laravel_pass
     command: >
       mysqld --default-authentication-plugin=mysql_native_password
     volumes:
-      - ./docker/mysql/data:/var/lib/mysql
+      - db_data:/var/lib/mysql
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
     ports:
       - "3306:3306"
