--- a/src/.env.example
+++ b/src/.env.example
@@ -35,7 +35,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="coachtech-flea-market"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
