--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=coachtechフリマ
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -35,7 +35,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="coachtech-flea-market"
+MAIL_FROM_NAME="coachtechフリマ"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
