--- a/src/.env.testing
+++ b/src/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=coachtechフリマ
 APP_ENV=testing
 APP_KEY=base64:2Y9JwUw3Vv8Nr+7yH2C8rb9N/Hb8eb++ofUA0rQ4EYw=
 APP_DEBUG=true
@@ -35,7 +35,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=test@example.com
-MAIL_FROM_NAME="coachtech-flea-market"
+MAIL_FROM_NAME="coachtechフリマ"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
