--- a/src/.env.testing
+++ b/src/.env.testing
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel_test
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=laravel_user
+DB_PASSWORD=laravel_pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
