Fix mypage tab handling and finalize feature tests

--- a/src/.env.testing
+++ b/src/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=coachtechフリマ
-APP_ENV=testing
-APP_KEY=base64:2Y9JwUw3Vv8Nr+7yH2C8rb9N/Hb8eb++ofUA0rQ4EYw=
+APP_ENV=test
+APP_KEY=base64:YpwIsWMMeR+r5mQyQd+SN2G0XnPv0rV7LKPUDgeWqVw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql_test
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel_test
-DB_USERNAME=laravel_user
-DB_PASSWORD=laravel_pass
+DB_DATABASE=demo_test
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
