--- a/src/.gitignore
+++ b/src/.gitignore
@@ -17,7 +17,6 @@ docker/mysql/data/
 /docker/mysql/
 docker/mysql/logs/
 docker/mysql/conf/
-/storage/app/public/*
-!/storage/app/public/dummy/
-!/storage/app/public/dummy/*
+/storage/app/public/images/
+/storage/app/public/profile/
 /public/storage
